2013-09-28  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION: Release 0.10.5
        * inst/NEWS.Rd: Release 0.10.5
        * inst/include/Rcpp/config.h: Release 0.10.5
        * debian/*: Similarly updated for new release to Debian

	* vignettes/Rcpp-unitTests.Rnw: Switched to Charter font just like
	the other eight vignettes

2013-09-28 Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/module/Module_generated_CppMethod.h : more code bloat
	to handle flexible semantics for passing parameters in methods
        * include/Rcpp/module/Module_generated_Pointer_CppMethod.h : same
        * inst/unitTests/cpp/Module.cpp: testing the above
        * unitTests/runit.Module.R: testing

2013-09-27  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/Rcpp-unitTests.Rnw: Re-activated vignette
        * DESCRIPTION: Version number bumped to 0.10.4.6

2013-09-27 Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/module/Module_generated_CppFunction.h : regenerated to
        use input_parameter traits for more flexible parameter passing strategy
        * unitTests/cpp/Module.cpp : more testing
        * unitTests/runit.Module.R : more testing

2013-09-22  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/sugar/functions/diff.h: Declare set_previous
	const and add a missing traits:: prefix before is_na

	* inst/unitTests/cpp/sugar.cpp: Unit test for diff() of int. vector
	* inst/unitTests/runit.sugar.R: Invoke new test

2013-09-21  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/Rcpp-modules.Rnw: Remove vignette-local compilations
	which again caused problems for the Windows builds at R-Forge and
	win-builder. Unit tests comprise the same functionality and pass.

	* vignettes/Rcpp-attributes.Rnw: Refresh look by using Bitstream
	Charter, and microtype package (cf http://www.khirevich.com/latex)
	* vignettes/Rcpp-extending.Rnw: Idem
	* vignettes/Rcpp-FAQ.Rnw: Idem
	* vignettes/Rcpp-modules.Rnw: Idem